--- a/index.html
+++ b/index.html
@@ -117,28 +117,28 @@
                                     <svg>
                                         <use href="./images/icons.svg#icon-antenna"></use>
                                     </svg>
-                                    <h3 class="credo__heading-third">Внимание к деталям</h3>
+                                    <h3 class="credo__heading-third heading-third">Внимание к деталям</h3>
                                     <p class="credo__text text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                                 </li>
                                 <li class="credo__item">
                                     <svg>
                                         <use href="./images/icons.svg#icon-clock"></use>
                                     </svg>
-                                    <h3 class="credo__heading-third">Пунктуальность</h3>
+                                    <h3 class="credo__heading-third heading-third">Пунктуальность</h3>
                                     <p class="credo__text text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                                 </li>
                                 <li class="credo__item">
                                     <svg>
                                         <use href="./images/icons.svg#icon-diagrama"></use>
                                     </svg>
-                                    <h3 class="credo__heading-third">Планирование</h3>
+                                    <h3 class="credo__heading-third heading-third">Планирование</h3>
                                     <p class="credo__text text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                                 </li>
                                 <li class="credo__item">
                                     <svg>
                                         <use href="./images/icons.svg#icon-astronaut"></use>
                                     </svg>
-                                    <h3 class="credo__heading-third">Современные технологии</h3>
+                                    <h3 class="credo__heading-third heading-third">Современные технологии</h3>
                                     <p class="credo__text text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                                 </li> 
                             </ul>
