Fix bugs HW 8 v5

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             </li>
                         </ul>
                     <!-- </div> -->
-                    <!-- <div class="header-navbar-menu__contactbox"> -->
+                    <div class="header-navbar-menu__contactbox">
                         <ul class="header-navbar-menu__links">
                             <li class="header-navbar-menu__item">
                                 <a href="tel:+380961111111" class="header-navbar-menu__link header-navbar-menu__link--blue-color">+38 096 111 11 11</a>
@@ -48,8 +48,8 @@
                                 <a href="mailto:info@devstudio.com" class="header-navbar-menu__link header-navbar-menu__link--grey-color">info@devstudio.com</a>
                             </li>
                         </ul>
-                    <!-- </div> -->
-                    <!-- <div class="header-navbar-menu__socialbox"> -->
+                     <!-- </div> -->
+                     <!-- <div class="header-navbar-menu__socialbox"> -->
                         <ul class="header-navbar-menu__socials">
                             <li class="header-navbar-menu__socials-list">
                                 <a href="#" class="header-navbar-menu__socials-link">Instagram</a>
@@ -64,7 +64,7 @@
                                 <a href="#" class="header-navbar-menu__socials-link">LinkedIn</a>
                             </li>
                         </ul>
-                    <!-- </div> -->
+                    </div>
             </div>
     <!-- =============================== Header tab/deck =============================== -->
                 <nav class="header-navbar">
